--- a/kooplexhub/container/templates/attachment_new.html
+++ b/kooplexhub/container/templates/attachment_new.html
@@ -5,13 +5,17 @@
 {% block realcontent %}
 <div class="container mt-2">
   <form id="attachment_new" class="form-horizontal was-validated" action="{% url 'container:new_attachment' %}" method="post">
-  <h5>Create a new attachment</h5>
+    <div class="card bg-light border-secondary shadow p-3">
+    <p>Create a new attachment</p>
   <form id="attachment_new" class="form-horizontal" action="{% url 'container:new_attachment' %}" method="post">
    {% csrf_token %}
    <table>
      {{ form.as_table }}
    </table>
-   {% include 'apply_cancel.html' with hide_cancel=True apply='Create' %}
+   <div class="mt-2">
+    {% include 'apply_cancel.html' with hide_cancel=True apply='Create' %}
+   </div>
   </form>
+  </div>
 </div>
 {% endblock %}
