--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -5,18 +5,19 @@
 <div class="card bg-light border-secondary shadow mb-3" id="card-{{ container.id }}">
   <div class="card-header">
     <div class="container-fluid">
-      <div class="d-flex flex-row justify-content-between">
-        <div class="d-flex flex-row justify-content-start">
+      <div class="d-flex flex-row">
+        <div class="d-flex flex-row justify-content-start" style="width:2%">
           <div>{% button_start_open_restart  container next_page='container:list' %}</div>
-	  <div class="ms-5" style="cursor: pointer;" 
+        </div>
+	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
+    onmouseout="this.style.fontWeight='normal'"
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}">
-            <span id="container-name-{{ container.id }}"><i class="bi bi-info-circle pe-2"></i>{{ container.friendly_name }}</span>
+           <div class="d-flex flex-row justify-content-start" ><span id="container-name-{{ container.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ container.friendly_name }}</span></div> 
+            <div class="d-flex flex-row justify-content-end">
+              <div>{% container_image container %}</div>
+        </div>
 	  </div>
 	</div>
-        <div class="d-flex flex-row justify-content-end">
-          <div>{% container_image container %}</div>
-	</div>
-      </div>
     </div>
   </div><!-- card header -->
   <div class="collapse" id="collapse-{{ container.id }}">
@@ -77,4 +78,3 @@
     </div>
   </div>
 </div>
-
