--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -1,4 +1,7 @@
 {% extends "container_layout.html" %}
+{% load render_table from django_tables2 %}
+{% load extras %}
+
 {% block head_content %}
 <style>
 .mytab{
@@ -14,13 +17,11 @@
 </style>
 {% endblock %}
 
-{% load render_table from django_tables2 %}
-
 {% block realcontent %}
 <div class="card shadow p-3 mb-5 bg-light rounded">
-<h5>You are configuring {{ container.friendly_name }} environment</h5>
 <form id="container-manage" class="form-horizontal" action="{% url 'container:configure_save' %}" method="post">
 {% csrf_token %}
+  {% title_with_button "You are now configurint <em>" container.friendly_name "</em> environment" %}
   <input type="hidden" name="container_id" value="{{ container.id }}">
   <ul class="nav nav-tabs" id="serviceConfigTabs" role="tablist">
     <li class="nav-item" role="presentation">
@@ -113,7 +114,6 @@
 {% endif %}
   </div>
 
-  {% include 'apply_cancel.html' %}
 </form>
 </div>
 
@@ -127,7 +127,7 @@ $("select[name='image'").change(function() {
     $( "select option:selected" ).each(function() {
         var id = $(this).attr("value");
         console.log( $( this ).text() + " -> " + id);
-	if (id === undefined) {
+	if (id === "") {
 	    $("#imageDescription").text("");
 	} else {
 	    var description = $("#image-description-" + id).attr("value");
