--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -1,76 +1,83 @@
 {% extends "project_layout.html" %}
 {% load render_table from django_tables2 %}
+{% load extras %}
+
+{% block head_content %}
+<style>
+.mytab{
+  color: rgb(196, 196, 196);
+}
+.mytab:hover{
+  color: rgb(196, 196, 196);
+  font-weight: bolder;
+}
+.mytab.active {
+  font-weight: bolder;
+}
+</style>
+{% endblock %}
 
 {% block realcontent %}
 <div class="card shadow p-3 mt-3 mb-3 bg-light rounded">
-  <form id="project-manage" class="form-horizontal" action="{% url 'project:configure' project.id %}" method="post">
+  <form id="project-manage" class="form-horizontal was-validated" action="{% url 'project:configure_save' %}" method="post">
   {% csrf_token %}
+  {% title_with_button "You are now configurint <em>" project.name "</em> project" %}
+  <input type="hidden" name="project_id" value="{{ project.id }}">
   <ul class="nav nav-tabs" id="projectConfigTabs" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link {% if active == "meta" %}active{% endif %}" 
+      <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" 
          id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" 
          aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Meta</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link {% if active == "collaboration" %}active{% endif %}" 
+      <a class="nav-link mytab {% if active == "collaboration" %}active{% endif %}" 
          id="tab-collaboration" data-bs-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" 
          aria-selected="{% if active == "collaboration" %}true{% else %}false{% endif %}">Collaboration</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link {% if active == "service" %}active{% endif %}"
+      <a class="nav-link mytab {% if active == "service" %}active{% endif %}"
          id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" 
          aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Container environments</a>
     </li>
   </ul>
   <div class="tab-content" id="projectConfogTabsContent">
     <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-      <h5 class="card-title mt-2">Describe your project</h5>
-      <textarea class="form-control" rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
-      <h5 class="card-title mt-2">Change the scope for this project</h5>
-      <select class="form-control" id="project_scopes-{{ project.id }}" name="project_scope">
-        {% for k, v in project.SCP_LOOKUP.items %}
-          <option value="{{ k }}" {% if project.scope == k %} selected {% endif %}>{{ v }}</option>
-        {% endfor %}
-      </select>
+      <table class="mt-3">
+        {{ form.as_table }}
+      </table>
     </div>
     <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
       {% include 'project_collaboration.html' %}
     </div>
     <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
-      <h5 class="card-title mt-2">Manage project environment bindings</h5>
-      <p>In these environments will you have access to the project folders and files</p>
       {% if t_all_services %}
-      <div class='mt-2'>
+      <div class='mt-3'>
         {% render_table t_all_services %}
       </div>
+      {% else %}
+      <p>You'll need to <a href="{% url 'container:new' %}">create</a> an environmant first.</p>
       {% endif %}
     </div>
   </div>
-  {% include 'apply_cancel.html' %}
   </form>
 </div>
 {% endblock %}
 
 {% block scripts %}
 <script>  
-$("#search_collaborator").keyup(function() {
-  var pattern = $( this ).val().toUpperCase();
-  console.log( "search: " + pattern );
-  $("input[id^='search-collaborator-'").each(function() {
-    var hide_it = true;
-    if (pattern.length > 0) {
-      var name = $( this ).attr("value").toUpperCase();
-      if ( name.indexOf(pattern) > -1 ) {
-        hide_it = false;
-      }
-    }
-    var widget = $( this ).parent().parent();
-    if (hide_it) {
-      widget.hide();
-    } else {
-      widget.show();
-    }
-  });
-}).keyup();
+$("#projectConfigTabs li a").on("click", function () {
+  var tab = $( this ).attr("id").split('-')[1]
+  console.log( tab )
+  $.cookie("configure_project_tab", tab, { 'path': '/', 'secure': true });
+});
+$("input[name='attach'").change(function() {
+  var icon;
+  if ( $( this ).is(":checked") ) {
+    icon = "bi-file-plus";
+  } else {
+    icon = "bi-file-minus";
+  }
+  $( this ).parent().children("label").children("i").attr("class", "bi " + icon);
+});
 </script>
 {% endblock %}
