--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -2,26 +2,25 @@
 
 {% load static %}
 {% load render_table from django_tables2 %}
+{% load extras %}
 
 {% block chardinhelp %}
          url: "{% static 'chardinjs/joinproject.json' %}"
 {% endblock %}
 
 {% block realcontent %}
-<h4 class="mb-3">Join project</h4>
 
 <div class="card shadow mt-3 p-3 mb-5 bg-light rounded" data-intro="#join_project"> 
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
-    <h5>Use the switch select those projects you want to join</h5>
+  {% if t_joinable.data|length > 0 %}
+  {% title_with_button "Use the switch to select those projects you want to join" button_icon="bi bi-people" button_label="Collaborate" button_color="btn-success"%}
   <div class="card-body">
-    {% if t_joinable.data|length > 0 %}
       {% render_table t_joinable %}
-    {% else %}
-      <p>There are no projects to join.</p>
-    {% endif %}
-    {% include 'apply_cancel.html' with hide_cancel=True apply='Join projects' %}
   </div>
+  {% else %}
+    <p>There are no projects to join.</p>
+  {% endif %}
 </form>
 </div>
 {% endblock %}
