--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -1,23 +1,25 @@
 {% load project_buttons %}
 {% load container_buttons %}
+{% load check_show %}
 
 
 <div class="card bg-light border-secondary shadow mb-3" id="card-{{ project.id }}">
   <div class="card-header">
     <div class="container-fluid">
-      <div class="d-flex flex-row justify-content-between">
-        <div class="d-flex flex-row justify-content-start">
+      <div class="d-flex flex-row">
+        <div class="d-flex flex-row justify-content-start" style="width:2%">
           <div data-intro="#button_operation">{% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
-	  <div class="ms-5" style="cursor: pointer;" 
+        </div>
+	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
+    onmouseout="this.style.fontWeight='normal'"
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
-            <span id="project-name-{{ project.id }}"><i class="bi bi-info-circle pe-2"></i>{{ project.name }}</span>
+           <div class="d-flex flex-row justify-content-start" ><span id="project-name-{{ project.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ project.name }}</span></div> 
+            <div class="d-flex flex-row justify-content-end">
+              <div>{% icon_collaborator project user %}</div>
+              <div class="ms-3">{% scope project %}</div>
+          </div>
 	  </div>
 	</div>
-        <div class="d-flex flex-row justify-content-end">
-          <div>{% icon_collaborator project user %}</div>
-          <div class="ms-3">{% scope project %}</div>
-	</div>
-      </div>
     </div>
   </div><!-- card header -->
   <div class="collapse" id="collapse-{{ project.id }}">
