--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -24,6 +24,19 @@
 
 {% block scripts %}
 <script>  
+$(document).ready(function() {
+  var uf = $.cookie("unfold_project");
+  if ( uf === undefined ) {
+    $.cookie("unfold_project", JSON.stringify([]), { 'path': '/', 'secure': true });
+    console.log('undefined');
+  } else {
+    $.each(JSON.parse(uf), function(index, value) {
+      console.log( value );
+      $("#collapse-" + value).collapse();
+    });
+
+  }
+});
 $("#search_project").keyup(function() {
   var pattern = $( this ).val().toUpperCase();
   console.log( "search: " + pattern );
@@ -45,6 +58,32 @@ $("#search_project").keyup(function() {
       $( card ).show();
     }
   });
+});
+$("div[data-bs-target^='#collapse-").mouseover(function() {
+  $(this).css("font-weight", "bold");
+  $(this).css("cursor", "pointer");
+});
+$("div[data-bs-target^='#collapse-").mouseout(function() {
+  $(this).css("font-weight", "normal");
+});
+$("div[data-bs-target^='#collapse-").click(function() {
+  var tgt = $(this).attr("data-bs-target");
+  var oid = tgt.split('-')[1];
+  console.log( tgt + "->" + oid );
+  setTimeout(function() {
+    var uf = JSON.parse( $.cookie("unfold_project") );
+    if ( $(tgt).hasClass('show') ) {
+      console.log('shown');
+      uf.push(oid);
+    } else {
+      console.log('collapsed');
+      uf.pop(oid);
+    }
+    var clean = uf.filter(function(element, index, self){
+      return index === self.indexOf(element);
+    });
+    $.cookie("unfold_project", JSON.stringify(clean), { 'path': '/', 'secure': true });
+  }, 1000);
 });
 </script>
 {% endblock %}
