--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -9,8 +9,7 @@
         <div class="d-flex flex-row justify-content-start" style="width:2%">
           <div>{% button_start_open_restart  container next_page='container:list' %}</div>
         </div>
-	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
-    onmouseout="this.style.fontWeight='normal'"
+	  <div class="ms-5 d-flex flex-row justify-content-between" style="width:97%"
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}">
            <div class="d-flex flex-row justify-content-start" ><span id="container-name-{{ container.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ container.friendly_name }}</span></div> 
             <div class="d-flex flex-row justify-content-end">
