--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -10,8 +10,8 @@
         <div class="d-flex flex-row justify-content-start" style="width:2%">
           <div data-intro="#button_operation">{% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
         </div>
-	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
-    onmouseout="this.style.fontWeight='normal'"
+	  <div class="ms-5 d-flex flex-row justify-content-between" 
+	       style="width:97%" 
                data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
            <div class="d-flex flex-row justify-content-start" ><span id="project-name-{{ project.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ project.name }}</span></div> 
             <div class="d-flex flex-row justify-content-end">
@@ -51,8 +51,4 @@
   </div>
 </div>
 
-{% comment %}
-JQuery
- onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')" 
-{% endcomment %}
 
