--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -3,6 +3,7 @@
 {% load extras %}
 
 {% block head_content %}
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <style>
 .mytab{
   color: rgb(196, 196, 196);
@@ -80,4 +81,5 @@ $("input[name='attach'").change(function() {
   $( this ).parent().children("label").children("i").attr("class", "bi " + icon);
 });
 </script>
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 {% endblock %}
